--- a/Patient Transport Migration/Views/Shared/_Layout.cshtml
+++ b/Patient Transport Migration/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title</title>
     <link href="~/Content/Css/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/Css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/Images/favicon.ico" rel="icon" type="image/x-icon" />
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
 </head>
