--- a/Patient Transport Migration/Views/Home/DokterStatus.cshtml
+++ b/Patient Transport Migration/Views/Home/DokterStatus.cshtml
@@ -8,8 +8,6 @@
 <script src="~/Scripts/jquery-1.10.2.js"></script>
 <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
 
-<h2>Dokter Status</h2>
-<hr />
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
 
@@ -27,7 +25,7 @@
             <div>
                 <!--Container-->
                 <div id="dvEditDokterStatus">
-                    @{Html.RenderPartial("_EditDokter", Model); }
+                    @{Html.RenderPartial("_DokterStatusEditDokter", Model); }
                 </div>
             </div>
         </div>
