Verder werken aan views
Giffify Ajax requests
Added Ajax Css + gif
View VerplegingOverzicht works but partial views lack data & logic

--- a/Patient Transport Migration/Content/Css/Site.css
+++ b/Patient Transport Migration/Content/Css/Site.css
@@ -62,3 +62,12 @@ tr:nth-child(even) {
 #footer {
     clear:both;
 }
+
+.ajax-loader {
+    /*background-image: url("../Images/cat_waiting.gif");*/
+    background-image: url("../Images/ajax-loader.gif");
+    height: 32px;
+    width: 32px;
+    background-repeat: no-repeat;
+    display:none;
+}
