Making views great again
Previous views working again.
Added a DateCompleted field to Aanvraag
Merged TransportWerknemerTaak into TransportTaak
Added more seed data
Made a db call in my global to spot any db errors.

--- a/Patient Transport Migration/Content/Css/Site.css
+++ b/Patient Transport Migration/Content/Css/Site.css
@@ -71,3 +71,8 @@ tr:nth-child(even) {
     background-repeat: no-repeat;
     display:none;
 }
+
+select {
+    margin-left: 4px;
+    margin-bottom: 4px;
+}
