--- a/Patient Transport Migration/Views/Home/Index.cshtml
+++ b/Patient Transport Migration/Views/Home/Index.cshtml
@@ -7,5 +7,5 @@
     <li>@Html.ActionLink("Dokter Status", "DokterStatus", "Home")</li>
     <li>@Html.ActionLink("Patiënt Info", "PatientInfo", "Home")</li>
     <li>@Html.ActionLink("Verpleging Overzicht", "VerplegingOverzicht", "Home")</li>
-    <li></li>
+    <li>@Html.ActionLink("Maak Vervoer Aanvraag", "MaakVervoerAanvraag", "Home")</li>
 </ul>
