--- a/Patient Transport Migration/Views/Home/VerplegingOverzicht.cshtml
+++ b/Patient Transport Migration/Views/Home/VerplegingOverzicht.cshtml
@@ -9,13 +9,13 @@
 
 <div>
     <div>
-        <h3>Patienten in orde</h3>
+        <h3>Recent vervoerde patienten</h3>
         <div id="dvLoaderPatientenInOrde" class="ajax-loader"></div>
         <div id="dvPatientenInOrde"></div>
     </div>
     <br />
     <div>
-        <h3>Wachtende patienten</h3>
+        <h3>Patienten wachtend op vervoer</h3>
         <div id="dvLoaderPatientenWachtend" class="ajax-loader"></div>
         <div id="dvPatientenWachtend"></div>
     </div>
