--- a/Patient Transport Migration/Views/Home/_PatientInfoPatientMedischeAanvragen.cshtml
+++ b/Patient Transport Migration/Views/Home/_PatientInfoPatientMedischeAanvragen.cshtml
@@ -5,19 +5,43 @@
         <div style="overflow-x:auto;">
             <table>
                 <tr>
-                    <th>Onderzoek</th>
-                    <th>In orde</th>
+                    <th>Vervoersaanvragen</th>
+                    <th>Van</th>
+                    <th>Naar</th>
+                    <th>Status</th>
                     <th>Link</th>
                 </tr>
                 @if (Model.PatientMedischeAanvragenVM.PatientAanvragen != null) {
-                    foreach (var aanvraag in Model.PatientMedischeAanvragenVM.PatientAanvragen) {
+                    foreach (var vervoersaanvraag in Model.PatientMedischeAanvragenVM.PatientAanvragen) {
                         <tr>
-                            <td>@aanvraag.AanvraagType.Omschrijving</td>
-                            <td>@if (@aanvraag.AanvraagStatus.IsLaatsteStap) { @Html.Raw("Ja") } else { @Html.Raw("Nee") }</td>
-                            <td><button class="btnLoadAanvraag" 
-                                        data-aanvraag-id="@aanvraag.Id" 
-                                        data-aanvraag-type="@aanvraag.AanvraagTypeId">
-                                Bekijk</button></td>
+                            <td>@vervoersaanvraag.DatumGemaakt</td>
+                            <td>@vervoersaanvraag.LocatieStart</td>
+                            <td>@vervoersaanvraag.LocatieEind</td>
+                            <td>
+                                @switch (vervoersaanvraag.GetTransportTaakStatus()) {
+                                    case Patient_Transport_Migration.Models.DAL.TransportTaakStatus.TransportTaakGemaakt:
+                                        @Html.Raw("Wachtend");
+                                        break;
+                                    case Patient_Transport_Migration.Models.DAL.TransportTaakStatus.TransportTaakTijdNodigGeschat:
+                                        @Html.Raw("Wachtend");
+                                        break;
+                                    case Patient_Transport_Migration.Models.DAL.TransportTaakStatus.WerknemerToegewezen_Wachtend:
+                                        @Html.Raw("Wachtend, werknemer toegewezen");
+                                        break;
+                                    case Patient_Transport_Migration.Models.DAL.TransportTaakStatus.WerknemerToegewezen_HuidigeTaak:
+                                        @Html.Raw("Wordt verplaatst");
+                                        break;
+                                    case Patient_Transport_Migration.Models.DAL.TransportTaakStatus.Voltooid:
+                                        @Html.Raw("Voltooid");
+                                        break;
+                                    default:
+                                       @Html.Raw("Onbekend");
+                                        break;
+                                } 
+                            </td>
+                            <td>
+                                <button class="btnLoadAanvraag" data-aanvraag-id="@vervoersaanvraag.Aanvraag.Id">Bekijk Aanvraag-data</button>
+                            </td>
                         </tr>
                     }
                 }
@@ -28,7 +52,7 @@
                 <p>Geen medische aanvragen voor deze patiënt gevonden.</p>
             }
 
-            <button id="btnLoadAanvraagTypes">Nieuwe aanvraag</button>
+            <button id="btnLoadAanvraagTypes">Nieuwe vervoers-aanvraag</button>
 
             <br />
 
@@ -60,12 +84,11 @@
 
             $(".btnLoadAanvraag").click(function (event) {
                 var aanvraagId = $(this).data("aanvraag-id");
-                var aanvraagTypeId = $(this).data("aanvraag-type-id");
                 var $ajaxLoader = $('dvLoaderAanvraagDetails');
                 var $dvContent = $("#dvAanvraagDetails");
                 $.ajax({
                     type: "GET",
-                    url: "GetCreateUpdateAanvraagDetails?aanvraagId=" + aanvraagId + "&aanvraagTypeId=" + aanvraagTypeId,
+                    url: "GetCreateUpdateAanvraagDetails?aanvraagId=" + aanvraagId + "&aanvraagTypeId=",
                     beforeSend: function () {
                         $dvContent.html('');
                         $ajaxLoader.show();
